# TUFF-DB

./: .gitignore  COMMERCIAL.md  Cargo.toml  PROTOCOL_SPEC.md  README.md  REGISTRY_STRUCTURE.txt  ans.json
docs/: ARCHITECTURE_SPEC.md  SUMMARY.md  Transformer-NEOアーキテクチャの評価.md  architecture.md  history_schema.md  index.md  models.md  phases.md  pipeline.md  protocol.md  wal.md
scripts/: regression_check.sh
src/: main.rs
src/models/: agent.rs  common.rs  history.rs  mod.rs
src/pipeline/: fetch.rs
tuff-brg/: Cargo.toml
tuff-brg/addon/: booster.js  manifest.json  options.html  options.js  selector.js
tuff-brg/assets/: history_viewer.html
tuff-brg/src/: main.rs
tuff-db/: Cargo.toml
tuff-db/src/: lib.rs  main.rs
tuff-db/src/db/: api.rs  engine.rs  index.rs  mod.rs
tuff-db/src/history/: compiler.rs
tuff-db/src/lightweight/: main.rs  mod.rs  storage.rs  verifier.rs
tuff-db/src/models/: abstract_.rs  agent.rs  claim.rs  evidence.rs  ids.rs  output.rs  verify.rs
tuff-db/src/pipeline/: fetch.rs  gap_resolver.rs  ingest.rs  llm_abstractor.rs  llm_verifier.rs  mock.rs  mod.rs  traits.rs
